# fft-conv-pytorch

./: pyproject.toml
.github/workflows/: test.yaml
doc/scripts/: generate_benchmark_plot.py
fft_conv_pytorch/: __init__.py  fft_conv.py  utils.py
